--- a/Skeleton/src/main/webapp/css/theme.css
+++ b/Skeleton/src/main/webapp/css/theme.css
@@ -1,5 +1,30 @@
 ﻿@CHARSET "utf-8";
+@import url("//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700");
 
 body {
 	padding-top: 70px;
+
+	font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+
+.btn {
+	font-family: sans-serif;
+}
+
+.form-control[readonly].adform-output {
+	cursor: text;
+	background-color: inherit;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+.navbar {
+	background-color: #eeeeee;
+	background-image: none;
+	filter: none;
+	border: 1px solid #dddddd;
+	text-shadow: 0 -1px 0 rgba(1, 1, 1, 0.3);
 }
