--- a/Skeleton/src/main/webapp/css/theme.css
+++ b/Skeleton/src/main/webapp/css/theme.css
@@ -2,7 +2,7 @@
 @import url("//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700");
 
 body {
-	padding-top: 70px;
+	margin-top: 70px;
 
 	font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
 	-ms-text-size-adjust: 100%;
@@ -13,11 +13,13 @@ body {
 	font-family: sans-serif;
 }
 
-.form-control[readonly].adform-output {
+.form-control[readonly].adform-output, .input-group-addon.adform-output {
 	cursor: text;
 	background-color: inherit;
 	background-image: none;
 	border: none;
+	border-bottom: 1px solid #ccc;
+	border-radius: 0;
 	box-shadow: none;
 }
 
