--- a/Skeleton/src/main/webapp/css/formating.css
+++ b/Skeleton/src/main/webapp/css/formating.css
@@ -3,6 +3,13 @@ body{
 }
 
 
+/* map */
+div#map_container
+{
+	width:100%;
+	height:350px;
+}
+
 /* carousel for ad pictures */
 .hide-bullets {
 list-style:none;
