--- a/Skeleton/src/main/webapp/css/formating.css
+++ b/Skeleton/src/main/webapp/css/formating.css
@@ -4,10 +4,10 @@ body{
 
 
 /* map */
-div#map_container
+div#map_canvas
 {
 	width:100%;
-	height:350px;
+	height:500px;
 }
 
 /* carousel for ad pictures */
