Implemented Alert display, removed unneccessary message pages, renamed the pages(because names are visible in URL and "/adpage" looked stupid.
Fixed some display bugs (e.g. shadows in dropdown menu removed because they caused eye cancer)

Changed linking in Advert list on index (added <a> tag links, because the java script only approach was lacking link features (display link url on mousover, open link in new tab etc.)

Added Adlist to Profile

Picture upload deactivated (temporary) because database etc. are already up to date but not the upload mechanism.

--- a/Skeleton/src/main/webapp/css/formating.css
+++ b/Skeleton/src/main/webapp/css/formating.css
@@ -75,7 +75,7 @@ margin-top:20px;
 }
 
 
-/* adpage "tabs" */
+/* advert page "tabs" */
 .stepwizard-step p {
     margin-top: 10px;
 }
@@ -131,7 +131,7 @@ margin-top:20px;
   border-radius: 15px;
 }
 
-.adpage-buttongroup {
+.advert-buttongroup {
 	padding-top: 15px;
 	margin-top:15px;
 	border-top: 1px solid #eee;
