--- a/Skeleton/src/main/webapp/WEB-INF/jspf/adpage_parts/adp_map.jspf
+++ b/Skeleton/src/main/webapp/WEB-INF/jspf/adpage_parts/adp_map.jspf
@@ -30,7 +30,7 @@
 		<form:input path="street" id="field-street" type="text" class="form-control adform-output" readonly="true" />
 		<form:input path="plz" id="field-plz" type="text" class="form-control adform-output" readonly="true" />
 		<form:input path="city" id="field-city" type="text" class="form-control adform-output" readonly="true" />
-		<input class="form-control" id="latlng" type="text" value="46.9520921, 7.4374421">
+		<input class="form-control adform-output" id="latlng" type="text" readonly="true" />
 	</c:if>
 </div>
 
