--- a/Skeleton/src/main/webapp/WEB-INF/jspf/adpage_parts/adp_map.jspf
+++ b/Skeleton/src/main/webapp/WEB-INF/jspf/adpage_parts/adp_map.jspf
@@ -19,7 +19,7 @@
 			</span>
 		</div>
 		<div class="input-group">
-			<form:input path="latlng" cssClass="form-control" id="latlng" type="text" value="46.9520921, 7.4374421"/>
+			<form:input path="latlng" id="latlng" type="text" cssClass="form-control" placeholder="46.9520921, 7.4374421"/>
 			<span class="input-group-btn">
 				<button class="btn btn-default" type="button" onclick="codeLatLng()">Set marker to coordinates</button>
 			</span>
@@ -30,7 +30,7 @@
 		<form:input path="street" id="field-street" type="text" class="form-control adform-output" readonly="true" />
 		<form:input path="plz" id="field-plz" type="text" class="form-control adform-output" readonly="true" />
 		<form:input path="city" id="field-city" type="text" class="form-control adform-output" readonly="true" />
-		<input class="form-control adform-output" id="latlng" type="text" readonly="true" />
+		<form:input path="latlng" id="latlng" type="text" class="form-control adform-output" readonly="true" />
 	</c:if>
 </div>
 
