Repaired page specific includes in header

--- a/Skeleton/src/main/webapp/WEB-INF/jspf/adpage_parts/adp_pictures.jspf
+++ b/Skeleton/src/main/webapp/WEB-INF/jspf/adpage_parts/adp_pictures.jspf
@@ -9,7 +9,7 @@
                             <!-- Carousel items -->
                             <div id="carousel-inner" class="carousel-inner">
                             	<c:forEach var="url" varStatus="status" items="${adForm.imgUrl}">
-                            		<div class="active item" data-slide-number="${status.index}">
+                            		<div class="item" data-slide-number="${status.index}">
 	                                	<img class="center-block" src="${url}">
 	                                </div>
                             	</c:forEach>
