Displaying interestees for advertiser in his advert. Layout adapted to 3 or 4 tabs

--- a/Skeleton/src/main/webapp/css/formating.css
+++ b/Skeleton/src/main/webapp/css/formating.css
@@ -90,8 +90,12 @@ margin-top:20px;
     position: relative;
 }
 
-.stepwizard-step {
+.stepwizard-step.three {
 	width: 33%;
+}
+
+.stepwizard-step.four {
+	width: 25%;
 }
 
 .stepwizard-step button[disabled] {
