--- a/Skeleton/src/main/webapp/css/theme.css
+++ b/Skeleton/src/main/webapp/css/theme.css
@@ -27,12 +27,29 @@ body {
 	box-shadow: none;
 }
 
+/* navbar */
 .navbar {
 	background-color: #eeeeee;
 	background-image: none;
 	filter: none;
 	border: 1px solid #dddddd;
 	text-shadow: 0 -1px 0 rgba(1, 1, 1, 0.3);
+}
+
+ul.navbar-nav.navbar-right>li{
+	-webkit-box-shadow: -11px 0 0 -10px #e5e5e5;
+	   -moz-box-shadow: -11px 0 0 -10px #e5e5e5;
+	        box-shadow: -11px 0 0 -10px #e5e5e5;
+}
+ul.navbar-nav.navbar-left>li{
+	-webkit-box-shadow: 11px 0 0 -10px #e5e5e5;
+	   -moz-box-shadow: 11px 0 0 -10px #e5e5e5;
+	        box-shadow: 11px 0 0 -10px #e5e5e5;
+}
+ul.navbar-nav.navbar-left>li:first-child{
+	-webkit-box-shadow: -11px 0 0 -10px #e5e5e5, 11px 0 0 -10px #e5e5e5;
+	   -moz-box-shadow: -11px 0 0 -10px #e5e5e5, 11px 0 0 -10px #e5e5e5;
+	        box-shadow: -11px 0 0 -10px #e5e5e5, 11px 0 0 -10px #e5e5e5;
 }
 
 /* Alert group */
