--- a/Skeleton/src/main/webapp/WEB-INF/jspf/adpage_parts/adp_map.jspf
+++ b/Skeleton/src/main/webapp/WEB-INF/jspf/adpage_parts/adp_map.jspf
@@ -9,11 +9,11 @@
 	<c:if test="${editable == true}">
 		<div class="input-group">
 			<form:input path="street" id="field-street" type="text" class="form-control" placeholder="e.g. Dorfstrasse 35B" />
-			<form:errors path="street" cssClass="help-inline" element="span"/>
+			<form:errors path="street" cssClass="help-inline control-label" element="span"/>
 			<form:input path="plz" id="field-plz" type="text" class="form-control" placeholder="e.g. 3012" />
-			<form:errors path="plz" cssClass="help-inline" element="span"/>
+			<form:errors path="plz" cssClass="help-inline control-label" element="span"/>
 			<form:input path="city" id="field-city" type="text" class="form-control" placeholder="e.g. Bern" />
-			<form:errors path="city" cssClass="help-inline" element="span"/>
+			<form:errors path="city" cssClass="help-inline control-label" element="span"/>
 			<span class="input-group-btn">
 				<button class="btn btn-default" type="button" onclick="codeAddress()">Set marker to address</button>
 			</span>
@@ -24,7 +24,7 @@
 				<button class="btn btn-default" type="button" onclick="codeLatLng()">Set marker to coordinates</button>
 			</span>
 		</div>
-		<form:errors path="latlng" cssClass="help-inline" element="span"/>
+		<form:errors path="latlng" cssClass="help-inline control-label" element="span"/>
 	</c:if>
 	<c:if test="${editable == false}">
 		<form:input path="street" id="field-street" type="text" class="form-control adform-output" readonly="true" />
