--- a/Skeleton/src/main/webapp/WEB-INF/jspf/adpage_parts/adp_map.jspf
+++ b/Skeleton/src/main/webapp/WEB-INF/jspf/adpage_parts/adp_map.jspf
@@ -1,44 +1,43 @@
-<c:set var="streetErrors"><form:errors path="street"/></c:set>
-<c:set var="plzErrors"><form:errors path="plz"/></c:set>
-<c:set var="cityErrors"><form:errors path="city"/></c:set>
-<div class="form-group<c:if test="${not empty streetErrors or not empty plzErrors or not empty cityErrors or not empty latlngErrors}"> has-error</c:if>">
-	<label class="control-label">Address</label>
-	<label class="control-label sr-only" for="field-street">Street</label>
-	<label class="control-label sr-only" for="field-plz">Postleitzahl</label>
-	<label class="control-label sr-only" for="field-city">City</label>
-	<c:if test="${editable == true}">
-		<div class="input-group">
-			<form:input path="street" id="field-street" type="text" class="form-control" placeholder="e.g. Dorfstrasse 35B" />
-			<form:errors path="street" cssClass="help-inline control-label" element="span"/>
-			<form:input path="plz" id="field-plz" type="text" class="form-control" placeholder="e.g. 3012" />
-			<form:errors path="plz" cssClass="help-inline control-label" element="span"/>
-			<form:input path="city" id="field-city" type="text" class="form-control" placeholder="e.g. Bern" />
-			<form:errors path="city" cssClass="help-inline control-label" element="span"/>
-			<span class="input-group-btn">
-				<button class="btn btn-default" type="button" onclick="codeAddress()">Set marker to address</button>
-			</span>
+<div class="row form-col">
+	<div class="col-md-4">
+		<c:set var="streetErrors"><form:errors path="street"/></c:set>
+		<c:set var="plzErrors"><form:errors path="plz"/></c:set>
+		<c:set var="cityErrors"><form:errors path="city"/></c:set>
+		<div class="form-group<c:if test="${not empty streetErrors or not empty plzErrors or not empty cityErrors or not empty latlngErrors}"> has-error</c:if>">
+			<label class="control-label">Address</label>
+			<label class="control-label sr-only" for="field-street">Street</label>
+			<label class="control-label sr-only" for="field-plz">Postleitzahl</label>
+			<label class="control-label sr-only" for="field-city">City</label>
+			<div class="address-input-group">
+				<c:if test="${editable == true}">
+					<form:input path="street" id="field-street" type="text" class="form-control" placeholder="e.g. Dorfstrasse 35B" />
+					<form:errors path="street" cssClass="help-inline control-label" element="span"/>
+					<form:input path="plz" id="field-plz" type="text" class="form-control" placeholder="e.g. 3012" />
+					<form:errors path="plz" cssClass="help-inline control-label" element="span"/>
+					<form:input path="city" id="field-city" type="text" class="form-control" placeholder="e.g. Bern" />
+					<form:errors path="city" cssClass="help-inline control-label" element="span"/>
+					<button class="btn btn-default" type="button" onclick="codeAddress()">Set marker to address</button>
+					<form:input path="latlng" id="latlng" type="text" cssClass="form-control" placeholder="46.9520921, 7.4374421"/>
+					<form:errors path="latlng" cssClass="help-inline control-label" element="span"/>
+					<button class="btn btn-default" type="button" onclick="codeLatLng()">Set marker to coordinates</button>
+				</c:if>
+				<c:if test="${editable == false}">
+					<form:input path="street" id="field-street" type="text" class="form-control adform-output" readonly="true" />
+					<form:input path="plz" id="field-plz" type="text" class="form-control adform-output" readonly="true" />
+					<form:input path="city" id="field-city" type="text" class="form-control adform-output" readonly="true" />
+					<form:input path="latlng" id="latlng" type="text" class="form-control adform-output" readonly="true" />
+				</c:if>
+			</div>
 		</div>
-		<div class="input-group">
-			<form:input path="latlng" id="latlng" type="text" cssClass="form-control" placeholder="46.9520921, 7.4374421"/>
-			<span class="input-group-btn">
-				<button class="btn btn-default" type="button" onclick="codeLatLng()">Set marker to coordinates</button>
-			</span>
-		</div>
-		<form:errors path="latlng" cssClass="help-inline control-label" element="span"/>
-	</c:if>
-	<c:if test="${editable == false}">
-		<form:input path="street" id="field-street" type="text" class="form-control adform-output" readonly="true" />
-		<form:input path="plz" id="field-plz" type="text" class="form-control adform-output" readonly="true" />
-		<form:input path="city" id="field-city" type="text" class="form-control adform-output" readonly="true" />
-		<form:input path="latlng" id="latlng" type="text" class="form-control adform-output" readonly="true" />
-	</c:if>
+	</div>
+	<div class="col-md-8">
+		<c:if test="${editable == true}">
+			<p>Drag the marker to select an Address</p>
+		</c:if>
+		<div id="map_canvas"></div>
+		
+		<c:if test="${editable == false}">
+			<script type="text/javascript"> codeAddress(); lockMarker(); </script>
+		</c:if>
+	</div>
 </div>
-
-<c:if test="${editable == true}">
-	<p>Drag the marker to select an Address</p>
-</c:if>
-<div id="map_canvas"></div>
-
-<c:if test="${editable == false}">
-	<script type="text/javascript"> codeAddress(); lockMarker(); </script>
-</c:if>
